# bestsign

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: deploy.yml  rust.yml
crates/bestsign/: Cargo.toml
crates/bestsign/src/: error.rs  lib.rs
crates/bestsign/src/ops/create/: config.rs  mod.rs
crates/bestsign/src/ops/update/: mod.rs  op_params.rs
crates/bindings/: Cargo.toml  README.md
crates/bindings/src/: lib.rs
crates/core/: Cargo.toml  README.md
crates/core-bindings/: Cargo.toml
crates/core-bindings/src/: lib.rs
crates/core/.cargo/: config.toml
crates/core/src/: error.rs  lib.rs  ops.rs  resolve.rs  utils.rs
crates/core/src/ops/: config.rs  mod.rs  open.rs  traits.rs  update.rs
crates/core/src/ops/config/: defaults.rs  utils.rs
crates/core/src/ops/create/: config.rs  mod.rs
crates/core/src/ops/open/: config.rs
crates/core/src/ops/update/: config.rs  mod.rs  op.rs  op_params.rs
crates/core/src/resolve/: blockstore_resolver.rs
crates/core/tests/: fixtures.rs  ipld_test.rs  test_utils.rs
crates/multiwallet-bindings/: Cargo.toml
crates/multiwallet-bindings/src/: lib.rs
crates/plugin/: Cargo.toml  README.md
crates/plugin/src/: bindings.rs  lib.rs
crates/plugin/wit/: world.wit
crates/superpeer/: Cargo.toml  README.md  justfile
crates/superpeer/src/: lib.rs
demo/: package-lock.json  package.json  svelte.config.js  vite.config.js
demo/src/lib/: App.svelte  Log.svelte  Wallet.svelte  stores.js
demo/src/lib/components/: Connect.svelte  CreateLog.svelte  DisplayPlog.svelte  FindPlog.svelte  Header.svelte  KeyValuePairInput.svelte  Modal.svelte  ScriptEditor.svelte  UpdateLog.svelte
demo/src/lib/components/graphics/: Disconnected.svelte  connected.svelte
demo/src/lib/utils/: bestsign.js  index.js
demo/src/routes/: +layout.js  +page.svelte
