[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.78.0" # Minimum Rust version for the entire workspace

[workspace.dependencies]
multicid = { git = "https://github.com/DougAnderson444/multicid.git", branch = "external-prover" }

[profile.release]
opt-level = "z"          # Optimize for size.
lto = true               # Link Time Optimization
codegen-units = 1        # allow for maximum size reduction optimizations
strip = true             # Automatically strip symbols from the binary.
panic = 'abort'          # Abort on panic
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false
