[package]
name = "bestsign"
version = "0.1.0"
edition = "2021"

[dependencies]
multibase = { version = "1.0", git = "https://github.com/cryptidtech/rust-multibase.git" }
multicid = { version = "1.0", git = "https://github.com/DougAnderson444/multicid.git", branch = "wasm32-compat" }
multicodec = { version = "1.0", git = "https://github.com/cryptidtech/rust-multicodec.git" }
multihash = { version = "1.0", git = "https://github.com/cryptidtech/multihash.git" }
multikey = { version = "1.0", git = "https://github.com/DougAnderson444/multikey.git", branch = "switch-chacha20" }
multisig = { version = "1.0", git = "https://github.com/cryptidtech/multisig.git" }
serde_cbor = "0.11.2"
thiserror = "1.0"
provenance-log = { path = "../../../../clones/provenance-log", features = [
  "rhai",
] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rand = "0.8"
