[package]
name = "bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bestsign-core = { path = "../core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
seed-keeper-core = { git = "https://github.com/DougAnderson444/seed-keeper.git" }
