[package]
name = "bestsign-core-bindings"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true   # Inherit from workspace

[lib]
crate-type = ["cdylib"]

[dependencies]
bestsign-core = { path = "../core", features = ["serde"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4.43"
getrandom = { version = "0.2", features = ["js"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3" }
tracing-wasm = { version = "0.2.1", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
multibase = { version = "1.0", git = "https://github.com/cryptidtech/rust-multibase.git" }
multicid = { git = "https://github.com/DougAnderson444/multicid.git", branch = "external-prover" }
multihash = { version = "1.0", git = "https://github.com/cryptidtech/multihash.git" }
multikey = { version = "1.0", git = "https://github.com/DougAnderson444/multikey.git" }
multiutil = { version = "1.0", git = "https://github.com/cryptidtech/multiutil.git" }
multitrait = { version = "1.0", git = "https://github.com/cryptidtech/multitrait.git" }
provenance-log = { workspace = true, features = ["rhai"] }
serde_cbor = "0.11"

[features]
default = ["logging"]
logging = ["tracing-wasm", "console_error_panic_hook"]
