[package]
name = "bestsign-core"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true # Inherit from workspace

[features]
wasm = ["getrandom/js"] # needed for CI testing on wasm32-unknown-unknown
serde = ["dep:serde"]

[dependencies]
multibase = { version = "1.0", git = "https://github.com/cryptidtech/rust-multibase.git" }
multicid = { git = "https://github.com/DougAnderson444/multicid.git", branch = "external-prover" }
multicodec = { version = "1.0", git = "https://github.com/cryptidtech/rust-multicodec.git" }
multihash = { version = "1.0", git = "https://github.com/cryptidtech/multihash.git" }
multikey = { version = "1.0", git = "https://github.com/DougAnderson444/multikey.git" }
multisig = { version = "1.0", git = "https://github.com/DougAnderson444/multisig.git" }
multiutil = { version = "1.0", git = "https://github.com/cryptidtech/multiutil.git" }
multitrait = { version = "1.0", git = "https://github.com/cryptidtech/multitrait.git" }
thiserror = "1.0"
provenance-log = { workspace = true, features = ["rhai"] }
serde = { version = "1.0", features = ["derive"], optional = true }
tracing = "0.1.40"

[dev-dependencies]
rand = "0.8"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.29.0", features = ["macros", "rt", "time", "sync"] }
serde_ipld_dagcbor = "0.6.1"
blockstore = "0.7.1"
multihash-codetable = { version = "0.1.4", features = ["sha2"] }
cid = "0.11.1"

# Specifiy dev dependencies for wasm32 target 
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"], optional = true }
