[package]
name = "bestsign-core"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true # Inherit from workspace

[features]
wasm = ["getrandom/js"] # needed for CI testing on wasm32-unknown-unknown
serde = ["dep:serde"]

[dependencies]
thiserror = "2"
provenance-log = { workspace = true, features = ["rhai"] }
serde = { version = "1.0", features = ["derive"], optional = true }
tracing = "0.1.40"
indexmap = "2.8.0"

[dev-dependencies]
bestsign-core = { workspace = true, features = ["serde"] }
rand = "0.8"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.29.0", features = ["macros", "rt", "time", "sync"] }
serde_ipld_dagcbor = "0.6.1"
blockstore = "0.7.1"
multihash-codetable = { version = "0.1.4", features = ["sha2"] }
cid = "0.11.1"

# Specifiy dev dependencies for wasm32 target 
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["js"], optional = true }
