[package]
name = "multiwallet-bindings"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
bestsign-core = { workspace = true }
wasm-bindgen = "0.2"
seed-keeper-core = { git = "https://github.com/DougAnderson444/seed-keeper.git" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
multikey = { workspace = true }
rand = "0.8.5"
getrandom = { version = "0.2.8", features = ["js"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3" }
tracing-wasm = { version = "0.2.1", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }

[features]
default = ["logging"]
logging = ["tracing-wasm", "console_error_panic_hook"]
