[package]
name = "plugin"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
wit-bindgen-rt = { version = "0.33.0", features = ["bitflags"] }
bestsign-core = { path = "../core" }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:plugin"

[package.metadata.component.dependencies]
