[package]
name = "bestsign-plugin"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
wit-bindgen-rt = { version = "0.33.0", features = ["bitflags"] }
bestsign-core = { path = "../core" }
# chrono = "0.4.38"

# [target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:plugin"

[package.metadata.component.dependencies]
