[package]
name = "superpeer"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[[bin]]
name = "bestsign-superpeer"
path = "./src/bin/main.rs"

[dependencies]
bestsign-core = { path = "../core" }
peerpiper = { path = "../../../peerpiper/crates/peerpiper" }
peerpiper-native = { path = "../../../peerpiper/crates/peerpiper-native" }
peerpiper-server = { path = "../../../peerpiper/crates/peerpiper-server" }
provenance-log = { workspace = true, features = ["rhai"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.34", features = ["macros", "net", "rt", "signal"] }
futures = "0.3.31"
thiserror = "2.0"
