[package]
name = "superpeer"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[[bin]]
name = "bestsign-superpeer"
path = "./src/bin/main.rs"

[dependencies]
bestsign-core = { path = "../core" }
peerpiper = { git = "https://github.com/PeerPiper/peerpiper.git" }
peerpiper-native = { git = "https://github.com/PeerPiper/peerpiper.git" }
peerpiper-server = { git = "https://github.com/PeerPiper/peerpiper.git" }
provenance-log = { workspace = true, features = ["rhai"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.34", features = ["macros", "net", "rt", "signal"] }
futures = "0.3.31"
thiserror = "2.0"
